--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@ title: ReactiveX - Intro
     <a href="#" class="btn btn-primary btn-lg" role="button">Learn more »</a>
   </div>
 
-  <p class="lead">Rx extends the observer pattern to support sequences of data/events and adds operators that allow you 
-     to compose sequences together declaratively while abstracting away concerns about things like low-level 
-     threading, synchronization, thread-safety, concurrent data structures, and non-blocking I/O.</p>
+  <div>
+    <h1>Intro</h1>
+    <p class="lead">Rx extends the observer pattern to support sequences of data/events and adds operators that allow you 
+      to compose sequences together declaratively while abstracting away concerns about things like low-level 
+      threading, synchronization, thread-safety, concurrent data structures, and non-blocking I/O.
+    </p>
+  </div>
 
   <h1>Recent Updates</h1>
   <ul class="posts">
