--- a/polymer/elements/code-snippet.html
+++ b/polymer/elements/code-snippet.html
@@ -17,7 +17,8 @@
   	    },
         respond: function(inResponse) {
           var code = atob(inResponse.data.content);
-          this.$.code.innerHTML = "<pre><code class='language-scala'>" + code + "</code></pre>";
+          var safeCode = goog.html.SafeHtml.unwrap(goog.html.SafeHtml.from(code));
+          this.$.code.innerHTML = "<pre><code class='language-scala'>" + safeCode + "</code></pre>";
           Prism.highlightElement(this.shadowRoot.querySelector('code'));
         },
         addScript: function(inSrc) {
