--- a/polymer/elements/code-snippet.html
+++ b/polymer/elements/code-snippet.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../components/polymer/polymer.html">
 
-<polymer-element name="code-snippet" attributes="url lang">
+<polymer-element name="code-snippet" attributes="url language">
   <template>
   	<link href="/css/prism.css" rel="stylesheet">
 	<div id="code"></div>
@@ -8,7 +8,7 @@
   <script>
   	Polymer('code-snippet', {
   		url: "",
-  		lang: "",
+  		language: "",
   		ready: function() {
         this.callbackFunc = "CodeSnippetCallback" + callbackId++;
         window[this.callbackFunc] = this.respond.bind(this);
@@ -18,7 +18,7 @@
       respond: function(inResponse) {
         var code = atob(inResponse.data.content).trim();
         var safeCode = goog.html.SafeHtml.unwrap(goog.html.SafeHtml.from(code));
-        this.$.code.innerHTML = "<pre><code class='language-" + this.lang + "'>" + safeCode + "</code></pre>";
+        this.$.code.innerHTML = "<pre><code class='language-" + this.language + "'>" + safeCode + "</code></pre>";
         Prism.highlightElement(this.shadowRoot.querySelector('code'));
       },
       addScript: function(inSrc) {
