--- a/polymer/elements/tabs-panel.html
+++ b/polymer/elements/tabs-panel.html
@@ -6,29 +6,16 @@
 	<polymer-layout vertical></polymer-layout>
 
 	<paper-tabs id="tabs" selected="{{selectedTab}}" class="transparent-teal" noink>
-		<paper-tab>Java</paper-tab>
+		<!--paper-tab>Java</paper-tab>
 		<paper-tab>Scala</paper-tab>
 		<paper-tab>Groovy</paper-tab>
 		<paper-tab>Clojure</paper-tab>
 		<paper-tab>Kotlin</paper-tab>
-		<paper-tab>JRuby</paper-tab>
+		<paper-tab>JRuby</paper-tab-->
 	</paper-tabs>
 
-	<div id="divs">
-		<div id="d0" style="display: block;">
-			<code-snippet url="https://api.github.com/repos/GeorgiKhomeriki/RxCourse/contents/HeadTail.java" language="java"></code-snippet>
-		</div>
-		<div id="d1" style="display: none;">
-			<code-snippet url="https://api.github.com/repos/GeorgiKhomeriki/RxCourse/contents/Gui.java" language="java"></code-snippet>
-		</div>
-		<div id="d2" style="display: none;">
-			<code-snippet url="https://api.github.com/repos/GeorgiKhomeriki/RxCourse/contents/Flatmap.java" language="java"></code-snippet>
-		</div>
-		<div id="d3" style="display: none;">
-			<code-snippet url="https://api.github.com/repos/GeorgiKhomeriki/RxCourse/contents/Game.java" language="java"></code-snippet>
-		</div>
-	</div>
-
+	<div id="divs"></div>
+	<content></content>
 	</template>
 
 	<script>
@@ -38,10 +25,32 @@
 	    ready: function() {
 			this.selectedTab = 0;
 			var polymer = this;
-			var tabs = this.$.tabs;
-			var snippets = data.snippets;
 
-			for (var i = 0; i < snippets.length; i++) {
+			var divs = this.$.divs.childNodes;
+			var tabs = this.$.tabs;
+
+			tabs.addEventListener('core-select', function() {
+				for (var i = 0; i < divs.length; i++) {
+					if (divs[i].style) {
+						if (i == tabs.selected) {
+							divs[i].style['display'] = 'block';
+						} else {
+							divs[i].style['display'] = 'none';
+						}
+					}
+				}
+
+				// var selectedDiv = polymer.$['div' + tabs.selected];
+				// console.log(selectedDiv);
+				// if (selectedDiv) {
+				// 	selectedDiv.style['display'] = 'block';
+				// }
+			});
+
+			//var tabs = this.$.tabs;
+			//var snippets = data.snippets;
+
+			/*for (var i = 0; i < snippets.length; i++) {
 				var snippet = snippets[i];
 				for (var language in snippet) {
 			        var url = snippet[language];
@@ -61,23 +70,7 @@
 
 
 			    }
-			}
-
-			var divs = this.$.divs.childNodes;
-
-			tabs.addEventListener('core-select', function() {
-				for (var i = 0; i < divs.length; i++) {
-					if (divs[i].style) {
-						divs[i].style['display'] = 'none';
-					}
-				}
-
-				var selectedDiv = polymer.$['d' + tabs.selected];
-				console.log(selectedDiv);
-				if (selectedDiv) {
-					selectedDiv.style['display'] = 'block';
-				}
-			});
+			}*/
 	    }
 	  });
 
