--- a/polymer/elements/tab-code.html
+++ b/polymer/elements/tab-code.html
@@ -19,7 +19,11 @@
         var divs = this.parentNode.$["divs"]
         var divNode = document.createElement("div");
         divNode.id = "div" + tabId++;
-        divNode.innerHTML = "<code-snippet url='" + this.url + "' language='" + this.language + "'></code-snippet>";
+        if (this.language) {
+          divNode.innerHTML = "<code-snippet url='" + this.url + "' language='" + this.language + "'></code-snippet>";
+        } else {
+          divNode.innerHTML = "<div><h2>TODO: " + this.label + "</h2></div>";
+        }
         divs.appendChild(divNode);
 	    }
   	});
