added second url possibility to tab-code elements

--- a/polymer/elements/tab-code.html
+++ b/polymer/elements/tab-code.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../components/polymer/polymer.html">
 
-<polymer-element name="tab-code" attributes="label language url">
+<polymer-element name="tab-code" attributes="label language url url2">
   <template>
   </template>
   <script>
@@ -8,6 +8,7 @@
       label: "",
       language: "",
       url: "",
+      url2: "",
   		attached: function() {
         // create tab
         var tabs = this.parentNode.$["tabs"];
@@ -21,6 +22,9 @@
         divNode.id = "div" + tabId++;
         if (this.url) {
           divNode.innerHTML = "<code-snippet url='" + this.url + "' language='" + this.language + "'></code-snippet>";
+          if (this.url2) {
+            divNode.innerHTML += "<code-snippet url='" + this.url2 + "' language='" + this.language + "'></code-snippet>";
+          }
         } else {
           divNode.innerHTML = "<div><h2>TODO: " + this.label + "</h2></div>";
         }
