Add first draft of documentation for the Concat operator. Add info to Catch operator page about in which RxJS distributions the operator can be found.

--- a/documentation/Operators/catch.html
+++ b/documentation/Operators/catch.html
@@ -243,8 +243,19 @@ Sequence complete</pre></div>
       <img src="IMAGES/catch.js.png" width="640" alt="catch" />
      </figure>
      <p>
+      <code>catch</code> is found in the following distributions:
+     </p>
+     <ul>
+      <li><code>rx.js</code></li>
+      <li><code>rx.all.js</code></li>
+      <li><code>rx.all.compat.js</code></li>
+      <li><code>rx.compat.js</code></li>
+      <li><code>rx.lite.js</code></li>
+      <li><code>rx.lite.compat.js</code></li>
+     </ul>
+     <p>
       For those browsers (e.g. Internet Explorer before IE9) for which the name &ldquo;catch&rdquo;
-      creates a conflict, there is an alias called <code>catchException</code>
+      creates a conflict, there is also an alias called <code>catchException</code>
      </p>
      <figure>
       <img src="IMAGES/onErrorResumeNext.js.png" width="640" alt="onErrorResumeNext" />
@@ -254,6 +265,13 @@ Sequence complete</pre></div>
       <code>onErrorResumeNext</code> switches to a back-up Observable both on an error <em>and</em>
       on a normal, error-free termination of the source Observable.
      </p>
+     <p>
+      <code>onErrorResumeNext</code> is found in the following distributions:
+     </p>
+     <ul>
+      <li><code>rx.js</code></li>
+      <li><code>rx.compat.js</code></li>
+     </ul>
     </div>
 
 <!-- RxKotlin ================================================================================= -->
