fixing broken HTML tags

--- a/documentation/Operators/merge.html
+++ b/documentation/Operators/merge.html
@@ -146,7 +146,7 @@ Sequence complete</pre></div>
      </p><p>
       If any of the individual Observables passed into <code>merge</code> terminates with an
       <code>onError</code> notification, the Observable produced by <code>merge</code> itself will
-      immediately terminate with an <code>onError<code> notification. If you would prefer a merge
+      immediately terminate with an <code>onError</code> notification. If you would prefer a merge
       that continues emitting the results of the remaining, error-free Observables before reporting
       the error, use <code>mergeDelayError</code> instead.
      </p>
@@ -209,7 +209,7 @@ Sequence complete</pre></div>
      </p><p>
       If any of the individual Observables passed into <code>merge</code> terminates with an
       <code>onError</code> notification, the Observable produced by <code>merge</code> itself will
-      immediately terminate with an <code>onError<code> notification. If you would prefer a merge
+      immediately terminate with an <code>onError</code> notification. If you would prefer a merge
       that continues emitting the results of the remaining, error-free Observables before reporting
       the error, use <code>mergeDelayError</code> instead.
      </p>
@@ -332,7 +332,7 @@ Sequence complete</pre></div>
      </p><p>
       If any of the individual Observables passed into <code>merge</code> terminates with an
       <code>onError</code> notification, the Observable produced by <code>merge</code> itself will
-      immediately terminate with an <code>onError<code> notification. If you would prefer a merge
+      immediately terminate with an <code>onError</code> notification. If you would prefer a merge
       that continues emitting the results of the remaining, error-free Observables before reporting
       the error, use <code>mergeDelayError</code> instead.
      </p>
